# aks-copilot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.json  demo.sh  main.py  patch.json  pyproject.toml  rag_index.faiss  rag_meta.json  report.md  suggestions.json  test_ollama.py
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.docker/: entrypoint.sh
.github/chatmodes/: bmad-master.chatmode.md
.github/instructions/: .copilot-instructions.md
.github/workflows/: ci.yml
docs/: PLAN.md  architecture.md  brief.md  prd.md  temp.md
docs/architecture/: architectural-goals.md  components.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  source-tree.md  tech-stack.md  workflow-1-pre-deployment-check-mvp.md
docs/handoffs/: dev-handoff-1.1.md  dev-handoff-1.4.md  dev-handoff-1.5.md  dev-handoff-2.1.md  (+4 more)
kb/: aks_storage.md  ingress_agic.md  requests_limits.md
logs/: llm.jsonl
rules/: index.json  requests_limits.md  storageclass.md
spec/: patch.txt  violation.txt
src/: config.py
tests/: debug_cli_trace.py  spec_storageclass.txt  test_cli.py  test_llm_explain.py  test_llm_suggest.py  test_patch_cli.py  test_patch_cli_sc002.py  test_patch_engine.py  test_report.py  test_requests_limits.py  test_resources_md.py  test_sc003_heuristic.py  test_storageclass.py  test_suggestions_generation.py  test_suggestions_merge.py  test_suggestions_schema.py  test_validator_forbidden.py
(+57 files in other folders)
